2004-04-29  lav

	* chset.cc: (choose_wch) new function to choose a wide char.
	* edit.h: add prototype.
	* keymap.cc, keymap.h, keymapfn.cc: add choose-wide-character action.
	* user.cc, user.h: (UserChooseWChar) new function.
	* window.cc, window.h: (PutWCh) new function to show single wide char.

2004-04-12  lav

	* block.cc: (WCharAtLC) new function.
	* chset.cc: fix for non-printable wchars in 0-255 range.
	* edit.cc: include langinfo.h.
	* edit.h: new prototypes.
	* ext.cc: (ReplaceWCharExt, ReplaceWCharExtMove) new functions.
	* frames.cc: drawing with unicode chars.
	* getstr.cc: check mb_mode var.
	* mb.cc, mb.h: use visualize_wchar when getting char width;
	  (InsertWChar) new function.
	* kern.cc: (InsertAutoindent) new function.
	* user.cc: use InsertAutoindent to save block marking in UserLineEnd.

2004-04-08  lav

	* edit.cc, edit.h: (getcode) use prompt arg, use history; (getcode_char,
	  getcode_wchar) new functions.
	* getstr.cc: better history handling; show old value even if history
	  is supplied; support insert-wchar-by-code action.
	* keymap.cc, keymap.h: insert-wchar-by-code action; ENTER_WCHAR_CODE
	  action number;
	* keymapdf.cc: binding for insert-wchar-by-code.
	* keymapfn.cc: functions for ENTER_WCHAR_CODE and ENTER_CHAR_CODE.
	* mb.cc: L'\0' is width 1 in le, shown as bold @.
	* screen.cc: don't show combining chars (width==0) in the line
	  beginning as it confuses ncurses.
	* user.cc, user.h: implement UserInsertWCharCode function.

2004-04-02  lav

	* mb.cc: use 0xfffd as replacement character for invalid mb sequences.

2004-04-01  lav

	* getstr.cc, mb.cc, mb.h: move mb_* functions to mb.cc;
	  (mb_get_pos_for_col) new function.
	* keymap.cc, keymap.h: make StringTyped unsigned.
	* keymapdf.cc: add some more xterm codes.
	* options.cc: support mb chars.

2004-03-31  lav

	* chset.cc, kern.cc: include wctype.h
	* getstr.cc: remove extra ;
	* screen.cc: allocate enough space for chr; clear line before filling